# freebsd-src

./: CONTRIBUTING.md  MAINTAINERS  Makefile  Makefile.inc1  Makefile.libcompat  ObsoleteFiles.inc  README.md  RELNOTES  UPDATING
cddl/lib/: Makefile
contrib/blocklist/: README  TODO
contrib/bmake/: bsd.after-import.mk
contrib/byacc/: aclocal.m4  configure
contrib/dialog/: aclocal.m4  configure
contrib/llvm-project/compiler-rt/lib/builtins/: CMakeLists.txt
contrib/ncurses/: NEWS  aclocal.m4  configure  dist.mk
contrib/sendmail/: FREEBSD-upgrade  Makefile  README
contrib/tzcode/: workman.sh
crypto/heimdal/: Makefile.in  configure
crypto/openssh/: buildpkg.sh.in  configure.ac  openssh.xml.in  sshd.8
etc/: Makefile  group  master.passwd  shells
etc/mail/: aliases
etc/mtree/: BSD.debug.dist  BSD.include.dist  BSD.root.dist  BSD.tests.dist  BSD.usr.dist  BSD.var.dist
include/: Makefile  paths.h
include/arpa/: Makefile
include/protocols/: Makefile
include/rpcsvc/: Makefile
lib/: Makefile
lib/clang/: llvm.build.mk
lib/libcalendar/: calendar.3
lib/libclang_rt/: Makefile
lib/libcompiler_rt/: Makefile.inc
lib/libcxxrt/: Makefile
lib/libefivar/: efi-osdep.h
lib/libgcc_s/: Symbol.map
lib/libkldelf/: Makefile
lib/libkvm/: Makefile  kvm_minidump_powerpc64.c  (+1 more)
libexec/: Makefile
release/: Makefile  Makefile.mirrors  Makefile.vm  release.sh
sbin/: Makefile
sbin/init/: ttys
secure/: Makefile
share/: Makefile
stand/: Makefile  loader.mk
sys/: Makefile
usr.bin/: Makefile
usr.sbin/: Makefile  Makefile.amd64  Makefile.i386
(+457 files in other folders)
